--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             // Add event listener to the button
             okButton.addEventListener('click', function() {
-                window.location.href = 'DirectLink'; // Ganti dengan URL tujuan Anda
+                window.location.href = 'https://www.highratecpm.com/yupa4q6mv3?key=bc8301669108a77557bc4abe511c9ada'; // Ganti dengan URL tujuan Anda
             });
         }
     </script>
